= Package NNbenchmark =
- Akshaj Verma, Salabila Mahdi, Patrice Kiener
- Christophe Dutang, John Nash 



NNbenchmark 2.3 - 2019-08-19
============================
- NNdatasets: Change uNeuroOne from 3 to 2 neurons and 10 to 7 parameters
- NNdatasets: mRef153: correct a typo in the number of neurons (from 4 to 3)
- u+mNNdatasets: Update the documentation with the number of parameters for each dataset
- prepareZZ: rearrange the examples with donttest to run less than 5 seconds
- DESCRIPTION: Yifu Yan as author of the timeR function + class (timeR package)
- Test CRAN check and prepare the upload to CRAN

NNbenchmark 2.2 - 2019-08-13
============================
- NNdataSummary()

NNbenchmark 2.1.1 - 2019-08-13
==============================
- clearNN() donotdetach now includes kableExtra, dplyr, stringr

NNbenchmark 2.1 - 2019-08-12
============================
- detachNN() (to move library(pkg) out of the loop in NNTemplate)

NNbenchmark 2.0.1 - 2019-08-04
==============================
- Date 2019-08-04 added at the first line of *.R files
- Linked to GitHub. Package is rebuilt before commit (to force change in NAMESPACE)

NNbenchmark 2.0 - 2019-08-04
============================
- column 'params' added to the timer table. Columns in the data.frame are:
- timer$stop(event, start, end, duration, RMSE, MAE, stars, params, comment)
- Connect to GitHub

NNbenchmark 1.9 - 2019-08-03
============================
- New disk
- timer$stop(event, RMSE, MAE, stars, comment, printmsg) column 'stars' added to the table

NNbenchmark 1.8.6 - 2019-07-31
==============================
- timer$stop(printmsg = TRUE) Use printmsg = FALSE to avoid printing

NNbenchmark 1.8.2 - 2019-07-30
==============================
- clearNN(): ZZ is (now) detached from the environments
- clearNN(): donotdetach now indludes packages rmarkdown, knitr and captioner
- timer$stop suppress the message on the time elapsed

NNbenchmark 1.8.1 - 2019-07-29
==============================