@@ -1,3 +1,3 @@
-NNdatasets
-mNNdatasets
-uNNdatasets
+NNdatasets: NNdatasets
+mNNdatasets: mDette, mFriedman, mIshigami, mRef153
+uNNdatasets: uDmod1, uDmod2, uDreyfus1, uDreyfus2, uGauss1, uGauss2, uGauss3, uNeuroOne
