@@ -3,6 +3,11 @@
 - Christophe Dutang, John Nash 
 
 
+NNbenchmark 2.3.1 - 2019-08-20 - sent to CRAN
+=============================================
+- add2csv: examples rewritten with tempfile()
+- datalist rewritten with format (file_without_ext: obj1, ..., objn)
+- use for this purpose the hidden function tools:::list_data_in_pkg()
 
 NNbenchmark 2.3 - 2019-08-19
 ============================
